# porsche-design-system

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE.md  README.md
cmake/: PdsNativeConfig.cmake.in
docs/: accessibility.md  architecture.md  component-completion-status.md  component-guidelines.md  current-implementation-gap-analysis.md  font-fidelity.md  implementation-traceability.md  known-visual-differences.md  legal-and-assets.md  platform-adaptations.md  pre-implementation-audit.md  testing.md  token-system.md  upstream-audit.md  upstream-component-inventory.md  upstream-token-map.md  upstream-version.md  visual-fidelity-plan.md
docs/api-mapping/: banner.md  button-pure.md  button.md  checkbox.md  divider.md  heading.md  icon.md  inline-notification.md  input-password.md  input-text.md  link-pure.md  link.md  modal.md  radio-group.md  select.md  switch.md  tabs.md  tag.md  text.md
examples/component-lab/: CMakeLists.txt  Main.qml  main.cpp
examples/reference-gallery/: CMakeLists.txt  Main.qml  main.cpp
spec/: component-status.json
spec/components/: banner.json  button-pure.json  button.json  checkbox.json  divider.json  heading.json  icon.json  inline-notification.json  input-password.json  input-text.json  link-pure.json  link.json  modal.json  radio-group.json  select.json  switch.json  tabs.json  tag.json  text.json
src/pds/core/: core.cpp  core.cppm
src/pds/qml/: IconProvider.qml  Motion.qml  Theme.qml  Typography.qml
src/pds/qml/controls/: Banner.qml  Button.qml  ButtonPure.qml  Checkbox.qml  Divider.qml  Heading.qml  Icon.qml  InlineNotification.qml  InputPassword.qml  InputText.qml  Link.qml  LinkPure.qml  Modal.qml  RadioGroup.qml  Select.qml  Spinner.qml  Switch.qml  Tabs.qml  Tag.qml  Text.qml
src/pds/qml/primitives/: FocusRing.qml  InteractiveArea.qml
tests/: CMakeLists.txt  consumer_test.cmake  reference_gallery_pages.cmake  token_determinism.cmake
tests/accessibility/: tst_accessibility.qml
tests/consumer/: CMakeLists.txt  main.cpp
tests/interaction/: tst_interaction.qml
tests/qml/: quick_test_main.cpp
tests/qml/cases/: tst_components.qml
tests/unit/: core_tests.cpp  token_generator_tests.cpp
tests/visual/: tst_visual.qml  visual_compare.cpp
tests/visual/fixtures/button/: reference.html
tests/visual/reference-web/: README.md  button-metrics.json
tests/visual/reports/: button-fidelity.html  button-fidelity.json
tokens/schema/: token.schema.json
tokens/source/: tokens.json
tools/token-generator/: CMakeLists.txt  main.cpp  token_generator.cpp  token_generator.cppm
tools/traceability-generator/: generate.mjs
tools/upstream-token-extractor/: extract.mjs
upstream/: porsche-design-system.lock.json
upstream/extracted/: tokens-4.4.0.json
